removed width from flex-img to fix the positioning of the page centered on small divices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,5 @@ footer h3 span {
     justify-content: center;
     align-self: center;
     height: 400px;
-    width: 400px;
   }
 }
